# pybind_skbuild_example

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: main.cpp
