[build-system]
requires = ["setuptools>=42", "scikit-build>=0.13", "cmake>=3.18", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pybind_skbuild_example"
version = "0.0.1"
description = "A minimal example package (with pybind11)"
readme = "README.md"
requires-python = ">=3.8"
